@@ -1,3 +1,7 @@
+2019-12-20  Rusell Almond  <ralmond@Cherry>
+
+	* R/Predicates.R ("!reset"): Fixed to use difftime of exactly 0 secs.
+
 2019-12-20    <ralmond@pluto.coe.fsu.edu>
 
 	* R/Status.R (getJS): Added object and verb as possible fields.
